/// <summary>
/// 动画名枚举
/// </summary>
public enum AnimEnum
{ 
    /// <summary>待机（站立）</summary>
    idle=0,
    /// <summary>走</summary>
    walk = 1,
    /// <summary>攻击</summary>
    attack = 2,
    /// <summary>被攻击</summary>
    beAttacked = 3,
    /// <summary>死亡</summary>
    dead = 4,
    /// <summary>施法</summary>
    readyAtk = 5,
    /// <summary>出场</summary>
    standOut = 6,
    /// <summary>晕(用不上)</summary>
    dizzy = 7
}
